@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/javacc
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.35 2011/08/12 16:02:22 xarthisius Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.37 2012/05/12 03:17:50 aballier Exp $
+
+  12 May 2012; Alexis Ballier <aballier@gentoo.org> javacc-4.2.ebuild:
+  keyword ~amd64-fbsd
+
+  13 Apr 2012; Ulrich Müller <ulm@gentoo.org> javacc-4.2.ebuild,
+  javacc-5.0.ebuild:
+  Move EAPI assignment to top of ebuild, bug 411875.
 
   12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> javacc-4.0-r4.ebuild:
   ppc64 stable wrt #355085
